src/objects/StudentAcademicCourseReqFromBanner__c.object
<CustomObject>
    <description>Control Object for Student Academic Course</description>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngagedPreassessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engaged Preassessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullTitle__c</fullName>
        <label>Full Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreassessmentCode__c</fullName>
        <label>Preassessment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementCode__c</fullName>
        <label>Requirement Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAcademicCourseRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Academic Course Requirement</label>
        <referenceTo>StudentAcademicCourseRequirement__c</referenceTo>
        <relationshipLabel>Student Academic Course Reqs From Banner</relationshipLabel>
        <relationshipName>StudentAcademicCourseReqsFromBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <label>Synchronization Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueParentKey__c</fullName>
        <label>Unique Parent Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Student Academic Course Req From Banner</label>
    <nameField>
        <label>Student Academic Course Req From Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Academic Course Reqs From Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>